--- a/index.html
+++ b/index.html
@@ -1,3 +1,59 @@
+<!DOCTYPE HTML>
+<!--
+	Aerial by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<h1>Hello Word</h1>
+	<head>
+		<title>GuideBook</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+	</head>
+	<body class="loading">
+		<div id="wrapper">
+			<div id="bg"></div>
+			<div id="overlay"></div>
+			<div id="main">
+
+				<!-- Header -->
+					<header id="header">
+						<h1>GuideBook</h1>
+						<p>Just Read Books</p>
+						<nav>
+							<ul>
+								<li><a href="#" class="icon fa-location-arrow"><span class="label">Find Library</span></a></li>
+								<li><a href="#" class="icon fa-home"><span class="label">Publishers</span></a></li>
+								<li><a href="#" class="icon fa-calendar-plus-o"><span class="label">Events</span></a></li>
+								<li><a href="#" class="icon fa-book"><span class="label">New Books</span></a></li>
+								<li><a href="#" class="icon fa-envelope-o"><span class="label">Contact</span></a></li>
+							</ul>
+							<ul>
+								<li><span class="label">Find Library</span></li>
+								<li><span class="label">Publishers</span></li>
+								<li><span class="label">Events</span></li>
+								<li><span class="label">New Books</span></li>
+								<li><span class="label">Contact</span></li>
+							</ul>
+						</nav>
+					</header>
+
+				<!-- Footer -->
+					<footer id="footer">
+						<span class="copyright"><i class="icon fa-copyright"></i> 2017</span>
+					</footer>
+
+			</div>
+		</div>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script>
+			window.onload = function() { document.body.className = ''; }
+			window.ontouchmove = function() { return false; }
+			window.onorientationchange = function() { document.body.scrollTop = 0; }
+		</script>
+	</body>
 </html>
