--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright"><i class="icon fa-copyright"></i> 2017</span>
+						<span class="copyright"><i class="icon fa-copyright"></i>GuideBook 2017</span>
+						<span> HomePage Design : <a href="http://html5up.net">HTML5 UP</a> | Developed By : Me</span>
 					</footer>
 
 			</div>
