--- a/index.html
+++ b/index.html
@@ -32,21 +32,12 @@
 								<li><a href="#" class="icon fa-book"><span class="label">New Books</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Contact</span></a></li>
 							</ul>
-							<ul>
-								<li><span class="label">Find Library</span></li>
-								<li><span class="label">Publishers</span></li>
-								<li><span class="label">Events</span></li>
-								<li><span class="label">New Books</span></li>
-								<li><span class="label">Contact</span></li>
-							</ul>
 						</nav>
 					</header>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright"><i class="icon fa-copyright"></i>GuideBook 2017</span>
-						<br/>
-						<span> HomePage Design : <a href="http://html5up.net">HTML5 UP</a> | Developed By : Me</span>
+						<span class="copyright"><i class="icon fa-copyright"></i> GuideBook 2017 - <span> HomePage Design: <a href="http://html5up.net">HTML5 UP</a> - Developed By: Me</span></span>
 					</footer>
 
 			</div>
