--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<span class="copyright"><i class="icon fa-copyright"></i> GuideBook 2017 - <span> HomePage Design: <a href="http://html5up.net">HTML5 UP</a> - Developed By: Me</span></span>
+						<span class="copyright"><i class="icon fa-copyright"></i> GuideBook 2017<br><span> HomePage Design: <a href="http://html5up.net">HTML5 UP</a> - Developed By: Me</span></span>
 					</footer>
 
 			</div>
