--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 					<footer id="footer">
 						<span class="copyright"><i class="icon fa-copyright"></i> GuideBook 2017</span>
 						<br>
-						<span> HomePage Design: <a href="http://html5up.net">HTML5 UP</a> - Developed By: Me</span>
+						<span> HomePage Design: <a href="http://html5up.net">HTML5 UP</a> - Developed with <i class="fa fa-heart" aria-hidden="true"></i> 
+By: Me</span>
 					</footer>
 
 			</div>
