--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -351,7 +351,7 @@
                                     <i class="icon-plus"></i>
                                 </a>
                                 <h3>Librairies Al Kitab</h3>
-                                <p>43, Avenue Habib Bourguiba Tunis, Tunisia 1000</p>
+                                <p>Tunis</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
