--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -503,7 +503,7 @@
                     </div>
                     <p class="testimonial-text">
                         "The <span style="color:gold">golden</span> rule for every business man is this: 'Put yourself in your customer's place."
-                        <strong>Orison Swett Marden</strong>
+                        <br><strong>Orison Swett Marden</strong>
                     </p>
                 </div>
             </div>
