--- a/pages/publishers.html
+++ b/pages/publishers.html
@@ -50,7 +50,7 @@
                     <div class="nav-collapse collapse pull-right">
                         <ul class="nav" id="top-navigation">
                             <li class="active"><a href="https://g-bayrem.github.io/test">Home</a></li>
-                            <li><a href="#libraries">Publishers</a></li>
+                            <li><a href="#publishers">Publishers</a></li>
                             <li><a href="#clients">Clients</a></li>
                         </ul>
                     </div>
@@ -65,7 +65,7 @@
 
         <!-- Service section end -->
         <!-- Portfolio section start -->
-        <div class="section secondary-section " id="libraries">
+        <div class="section secondary-section " id="publishers">
             <div class="triangle"></div>
             <div class="container">
                 <div class=" title">
