--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							<ul>
 								<li><a href="https://g-bayrem.github.io/test/pages/libraries.html" class="icon fa-location-arrow"><span class="label">Find Library</span></a></li>
 								<li><a href="https://g-bayrem.github.io/test/pages/publishers.html" class="icon fa-home"><span class="label">Publishers</span></a></li>
-								<li><a href="#" class="icon fa-calendar-plus-o"><span class="label">Events</span></a></li>
+								<li><a href="https://g-bayrem.github.io/test/pages/events.html" class="icon fa-calendar-plus-o"><span class="label">Events</span></a></li>
 								<li><a href="#" class="icon fa-book"><span class="label">New Books</span></a></li>
 								<li><a href="#" class="icon fa-envelope-o"><span class="label">Contact</span></a></li>
 							</ul>
