--- a/pages/events.html
+++ b/pages/events.html
@@ -131,14 +131,14 @@
                 </div>
                 <div class="event-table row-fluid">
                     <div class="span4 event-column">
-                        <h3>Event Name</h3>
+                        <h3>Jane Austen Book Club</h3>
                         <ul class="list">
-                            <li class="address"><span><i class="fa fa-map-marker" aria-hidden="true"></i> the address</span></li>
-                            <li><span><i class="fa fa-calendar" aria-hidden="true"></i> the date</span></li>
-                            <li><span><i class="fa fa-user" aria-hidden="true"></i> the owner</span></li>
+                            <li class="address"><span><i class="fa fa-map-marker" aria-hidden="true"></i> Topkapi - Lafayette</span></li>
+                            <li><span><i class="fa fa-calendar" aria-hidden="true"></i> 05/07/2017 3:00PM</span></li>
+                            <li><span><i class="fa fa-user" aria-hidden="true"></i> Amal Bedhyefi</span></li>
                             <li><span><i class="fa fa-ticket" aria-hidden="true"></i> Free</span></li>
                         </ul>
-                        <a href="#" class="button button-ps">JOIN</a>
+                        <a href="https://www.facebook.com/events/1547711165317446/" class="button button-ps">JOIN</a>
                     </div>
                     <div class="span4 event-column">
                         <h3>Event Name</h3>
