--- a/pages/events.html
+++ b/pages/events.html
@@ -48,7 +48,7 @@
                     <!-- Main navigation -->
                     <div class="nav-collapse collapse pull-right">
                       <ul class="nav" id="top-navigation">
-                          <li class="active"><a href="https://g-bayrem.github.io/test">Home</a></li>
+                          <li class="active"><a href="https://g-bayrem.github.io/GuideBook">Home</a></li>
                           <li><a href="#newest">Newest</a></li>
                           <li><a href="#events">Events</a></li>
                       </ul>
