--- a/pages/publishers.html
+++ b/pages/publishers.html
@@ -49,7 +49,7 @@
                     <!-- Main navigation -->
                     <div class="nav-collapse collapse pull-right">
                         <ul class="nav" id="top-navigation">
-                            <li class="active"><a href="https://g-bayrem.github.io/test">Home</a></li>
+                            <li class="active"><a href="https://g-bayrem.github.io/GuideBook">Home</a></li>
                             <li><a href="#publishers">Publishers</a></li>
                             <li><a href="#clients">Clients</a></li>
                         </ul>
