--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -88,6 +88,9 @@
                     <li class="filter" data-filter="manouba">
                         <a href="#noAction">Manouba</a>
                     </li>
+                    <li class="filter" data-filter="sousse">
+                        <a href="#noAction">Sousse</a>
+                    </li>
                 </ul>
                 <!-- Start details for portfolio project 1 -->
                 <div id="single-project">
