--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -129,20 +129,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Manuskri.tn</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>1 Place Tahar Haddad, Villa Cogite, Les Berges du Lac, Tunis, Tunisia 1053</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>E-mail</span>contact@manuskri.tn</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>https://www.fb.com/Manuskri.tn</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span>https://manuskri.tn/</div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -358,14 +358,14 @@
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix ariana">
+                        <li class="span4 mix online">
                             <div class="thumbnail">
                                 <img src="images/Portfolio02.png" alt="project 2">
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv1">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Manuskri.tn</h3>
+                                <p>Online Bookstore</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
