--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -140,9 +140,9 @@
                                     <div>
                                         <span>E-mail</span>contact@manuskri.tn</div>
                                     <div>
-                                        <span>Facebook</span>https://www.fb.com/Manuskri.tn</div>
+                                        <span>Facebook</span>fb.com/Manuskri.tn</div>
                                     <div>
-                                        <span>Link</span>https://manuskri.tn/</div>
+                                        <span>Link</span>www.manuskri.tn</div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -157,20 +157,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Culturel El Menzah 6</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>centre commercial "50 boutiques", 2eme étage, Menzah 6</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>58 490 911</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>fb.com/libaririeculturel</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span>www.culturel.tn</div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -185,20 +185,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Culturel Zephyr</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>Centre commercial Zephyr 1ère étage La Marsa</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>71 775 793</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>fb.com/libaririeculturel</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span>www.culturel.tn</div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -369,14 +369,14 @@
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix manouba">
+                        <li class="span4 mix ariana">
                             <div class="thumbnail">
                                 <img src="images/Portfolio03.png" alt="project 3">
                                 <a href="#single-project" class="more show_hide" rel="#slidingDiv2">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Culturel El Menzah 6</h3>
+                                <p>Ariana</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -386,8 +386,8 @@
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv3">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Culturel Zephyr</h3>
+                                <p>La Marsa</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
