--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -213,20 +213,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Librairie Alyssa</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>Rue de Yougoslavie, centre le palmarium local n° 150 Tunis</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>71 343 145</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>fb.com/LibrairieAlyssaa</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span></div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -241,20 +241,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Librairie Tounes</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>Rue de Angleterre, Tunis</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>71 321 888</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>fb.com/librairiedetunis</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span></div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -269,20 +269,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Librairie Cendrillon</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>03 rue des tanneurs Tunis</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>71 255 895</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span>fb.com/librairie.cendrillion</div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span></div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -397,19 +397,19 @@
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv4">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Librairie Alyssa</h3>
+                                <p>Tunis</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix manouba">
+                        <li class="span4 mix tunis">
                             <div class="thumbnail">
                                 <img src="images/Portfolio06.png" alt="project 6">
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv5">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Librairie Tounes</h3>
+                                <p>Tunis</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
@@ -419,8 +419,8 @@
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv6">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Librairie Cendrillon</h3>
+                                <p>Tunis</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
