--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -391,7 +391,7 @@
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix ariana">
+                        <li class="span4 mix tunis">
                             <div class="thumbnail">
                                 <img src="images/Portfolio05.png" alt="project 5">
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv4">
