--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -112,9 +112,9 @@
                                     <div>
                                         <span>Tel</span>71 258 566</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/librairiesalkitab</div>
+                                        <span>Facebook</span><a target="_blank" href="fb.com/librairiesalkitab">Librairies Al Kitab - Tunis</a></div>
                                     <div>
-                                        <span>Link</span>http://alkitab.tn</div>
+                                        <span>Link</span>www.alkitab.tn</div>
                                 </div>
                                 <p style="overflow:hidden"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d949.8103704976565!2d10.181746371691192!3d36.80009950284504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12fd346df4ed32a3%3A0xfcd1d42ec836bbb1!2sLibrairie+Al+Kitab!5e0!3m2!1sen!2stn!4v1498276329794" width="100%" height="120" frameborder="0" style="border:0" allowfullscreen></iframe></p>
                             </div>
