--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -112,7 +112,7 @@
                                     <div>
                                         <span>Tel</span>71 258 566</div>
                                     <div>
-                                        <span>Facebook</span><a target="_blank" href="fb.com/librairiesalkitab">Librairies Al Kitab - Tunis</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/librairiesalkitab">Librairies Al Kitab - Tunis</a></div>
                                     <div>
                                         <span>Link</span>www.alkitab.tn</div>
                                 </div>
