--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -136,11 +136,11 @@
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>1 Place Tahar Haddad, Villa Cogite, Les Berges du Lac, Tunis, Tunisia 1053</div>
+                                        <span>Address</span>1 Place Tahar Haddad, Villa Cogite, Les Berges du Lac</div>
                                     <div>
                                         <span>E-mail</span>contact@manuskri.tn</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/Manuskri.tn</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/Manuskri.tn">Manuskri.tn</a></div>
                                     <div>
                                         <span>Link</span>www.manuskri.tn</div>
                                 </div>
@@ -168,7 +168,7 @@
                                     <div>
                                         <span>Tel</span>58 490 911</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/libaririeculturel</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/libaririeculturel">Culturel El Menzah 6</a></div>
                                     <div>
                                         <span>Link</span>www.culturel.tn</div>
                                 </div>
@@ -196,7 +196,7 @@
                                     <div>
                                         <span>Tel</span>71 775 793</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/libaririeculturel</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/libaririeculturel">Culturel Zephyr</a></div>
                                     <div>
                                         <span>Link</span>www.culturel.tn</div>
                                 </div>
@@ -224,7 +224,7 @@
                                     <div>
                                         <span>Tel</span>71 343 145</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/LibrairieAlyssaa</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/LibrairieAlyssaa">Librairie Alyssa</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -252,7 +252,7 @@
                                     <div>
                                         <span>Tel</span>71 321 888</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/librairiedetunis</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/librairiedetunis">Librairie Tounes</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -280,7 +280,7 @@
                                     <div>
                                         <span>Tel</span>71 255 895</div>
                                     <div>
-                                        <span>Facebook</span>fb.com/librairie.cendrillion</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/librairie.cendrillion">Librairie Cendrillon</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -297,20 +297,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Librairie Cendrillon - Ariana</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>23 av Habib bourguiba, Ariana, Tunisia 2080</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>28 294 198</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="fb.com/librairie-cendrillon-مكتبة-سندرلا-178619825997221/">Librairie Cendrillon - Ariana</a></div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span></div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -430,8 +430,8 @@
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv7">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
-                                <p>Thumbnail caption...</p>
+                                <h3>Librairie Cendrillon - Ariana</h3>
+                                <p>Ariana</p>
                                 <div class="mask"></div>
                             </div>
                         </li>
