--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -112,7 +112,7 @@
                                     <div>
                                         <span>Tel</span>71 258 566</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/librairiesalkitab">Librairies Al Kitab - Tunis</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/librairiesalkitab">Librairies Al Kitab - Tunis</a></div>
                                     <div>
                                         <span>Link</span>www.alkitab.tn</div>
                                 </div>
@@ -140,7 +140,7 @@
                                     <div>
                                         <span>E-mail</span>contact@manuskri.tn</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/Manuskri.tn">Manuskri.tn</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/Manuskri.tn">Manuskri.tn</a></div>
                                     <div>
                                         <span>Link</span>www.manuskri.tn</div>
                                 </div>
@@ -168,7 +168,7 @@
                                     <div>
                                         <span>Tel</span>58 490 911</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/libaririeculturel">Culturel El Menzah 6</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/libaririeculturel">Culturel El Menzah 6</a></div>
                                     <div>
                                         <span>Link</span>www.culturel.tn</div>
                                 </div>
@@ -196,7 +196,7 @@
                                     <div>
                                         <span>Tel</span>71 775 793</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/libaririeculturel">Culturel Zephyr</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/libaririeculturel">Culturel Zephyr</a></div>
                                     <div>
                                         <span>Link</span>www.culturel.tn</div>
                                 </div>
@@ -224,7 +224,7 @@
                                     <div>
                                         <span>Tel</span>71 343 145</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/LibrairieAlyssaa">Librairie Alyssa</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/LibrairieAlyssaa">Librairie Alyssa</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -252,7 +252,7 @@
                                     <div>
                                         <span>Tel</span>71 321 888</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/librairiedetunis">Librairie Tounes</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/librairiedetunis">Librairie Tounes</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -280,7 +280,7 @@
                                     <div>
                                         <span>Tel</span>71 255 895</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/librairie.cendrillion">Librairie Cendrillon</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/librairie.cendrillion">Librairie Cendrillon</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
@@ -308,7 +308,7 @@
                                     <div>
                                         <span>Tel</span>28 294 198</div>
                                     <div>
-                                        <span>Facebook</span><a class="fbp" target="_blank" href="www.fb.com/librairie-cendrillon-مكتبة-سندرلا-178619825997221/">Librairie Cendrillon - Ariana</a></div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/librairie-cendrillon-مكتبة-سندرلا-178619825997221/">Librairie Cendrillon - Ariana</a></div>
                                     <div>
                                         <span>Link</span></div>
                                 </div>
