--- a/pages/libraries.html
+++ b/pages/libraries.html
@@ -325,20 +325,20 @@
                         <div class="span6">
                             <div class="project-description">
                                 <div class="project-title clearfix">
-                                    <h3>Library's Name</h3>
+                                    <h3>Readers Corner</h3>
                                     <span class="show_hide close">
                                         <i class="icon-cancel"></i>
                                     </span>
                                 </div>
                                 <div class="project-info">
                                     <div>
-                                        <span>Address</span>address here</div>
+                                        <span>Address</span>La Marsa</div>
                                     <div>
-                                        <span>Tel</span>phone number</div>
+                                        <span>Tel</span>71 746 196</div>
                                     <div>
-                                        <span>Facebook</span>fb page or other</div>
+                                        <span>Facebook</span><a class="fbp" target="_blank" href="https://www.fb.com/Readers-Corner-230190677369442/">Readers Corner</a></div>
                                     <div>
-                                        <span>Link</span>http://example.com</div>
+                                        <span>Link</span></div>
                                 </div>
                                 <p>map here</p>
                             </div>
@@ -435,13 +435,13 @@
                                 <div class="mask"></div>
                             </div>
                         </li>
-                        <li class="span4 mix manouba">
+                        <li class="span4 mix tunis">
                             <div class="thumbnail">
                                 <img src="images/Portfolio09.png" alt="project 9">
                                 <a href="#single-project" class="show_hide more" rel="#slidingDiv8">
                                     <i class="icon-plus"></i>
                                 </a>
-                                <h3>Thumbnail label</h3>
+                                <h3>Readers Corner</h3>
                                 <p>Thumbnail caption...</p>
                                 <div class="mask"></div>
                             </div>
